# jsonpath24

./: .gitignore  Pipfile  README.md  pyproject.toml  setup.py
jsonpath/: __init__.py  env.py  exceptions.py  node.py  path.py  types.py
jsonpath/functions/: __init__.py  count.py  filter_function.py  length.py  match.py  nothing.py  search.py  value.py
scripts/: benchmark.py  pprofile.py
src/jsonpath24/: _jsonpath24.cpp
tests/: test_compliance.py
